[package]
name = "aw-fel"
version = "0.4.1"
authors = ["Razican <razican@protonmail.ch>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Razican/aw-fel-rs"
documentation = "https://docs.rs/aw-fel/"
description = """
Library for dealing with Allwinner devices in FEL mode, in pure Rust.
"""
keywords = ["arm", "sunxi", "allwinner", "fel"]
categories = ["embedded"]

[dependencies]
failure = "0.1.3"
libusb = "0.3.0"
byteorder = "1.2.6"

[features]
default = ["uboot"]
uboot = []
