[package]
name = "aw-fel"
version = "0.5.2"
authors = ["Razican <razican@protonmail.ch>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Razican/aw-fel-rs"
documentation = "https://docs.rs/aw-fel/"
description = """
Library for dealing with Allwinner devices in FEL mode, in pure Rust.
"""
keywords = ["arm", "sunxi", "allwinner", "fel"]
categories = ["embedded"]

[badges]
travis-ci = { repository = "Razican/aw-fel-rs", branch = "master" }
codecov = { repository = "Razican/aw-fel-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "Razican/aw-fel-rs" }
is-it-maintained-open-issues = { repository = "Razican/aw-fel-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
failure = "0.1.3"
libusb = "0.3.0"
byteorder = "1.2.7"

[features]
default = ["uboot"]
uboot = []
